test-cases/valid/reject/missing_return_expression.ul
void main() {
    foo();
}

int foo() {
    return; // Cannot have empty return in non-void function
}
